overflow fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 body {
 	width: 100%;
-	overflow-y: hidden;
 	padding-bottom: 20px;
 }
 
